# alloc-context

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.cursor/: mcp.json
.github/workflows/: bump-release.yml  ci.yml  paid-smoke.yml  publish-mcp-registry.yml  release-pr.yml  release.yml  x402-check.yml
alloccontext/: __init__.py  __main__.py  config.py  constants.py  horizon.py  status_report.py  timeutil.py  x402_production_check.py  x402_smoke_redact.py
alloccontext/alerts/: __init__.py  policy.py
alloccontext/ingest/: __init__.py  cf_benchmarks.py  cf_history.py  coinbase_client.py  coinbase_portfolio.py  coingecko.py  coinmarketcap.py  env_keys.py  etf_flows.py  fear_greed.py  fred.py  http_errors.py  kalshi.py  kalshi_api.py  kalshi_client.py  kalshi_files.py  kalshi_state.py  kraken_client.py  kraken_portfolio.py  macro_calendar.py  macro_normalize.py  market_snapshots.py  outcome.py  runner.py
alloccontext/ingest/exchange/: __init__.py  coinbase_adapter.py  kraken_adapter.py  live.py  portfolio.py  registry.py  types.py
alloccontext/mcp/: __init__.py  assets.py  bazaar.py  contracts.py  handlers.py  http.py  server.py  staleness.py  validation.py  x402_config.py  x402_pricing.py  x402_stables.py
alloccontext/rollup/: __init__.py  band.py  breadth.py  cf_math.py  cluster.py  cluster_config.py  comparison.py  context.py  delta.py  etf.py  fear_greed.py  macro.py  portfolio.py  rebalance.py  regime.py  sentiment.py  snapshots.py  tape.py
alloccontext/store/: db.py  meta.py  retention.py  status.py
config/: config.dev.yaml  config.example.yaml  fred-series.yaml  macro-calendar.yaml
deploy/: backup-sqlite.sh  backup_sqlite.py  remote-install.sh  restore-sqlite.sh  rsync-to-vps.sh  run-vps-smoke.sh  run-vps-x402-check.sh  shared.env.example  vps-layout.md  vps-setup.md  wait-for-mcp-ready.sh
deploy/systemd/: alloc-context-alerts.service  alloc-context-alerts.timer  alloc-context-backup.service  alloc-context-backup.timer  alloc-context-daily-brief.service  alloc-context-ingest.service  alloc-context-ingest.timer  alloc-context-mcp-http.service
docs/: agent-integration.md  architecture.md  context-bundle.md  cursor-mcp.example.json  cursor-mcp.md  data-sources.md  distribution.md  examples.md  local-dev.md  mcp-discovery.md  mcp-http.md  mcp-roadmap.md  mcp.md  migration.md  publishing.md  self-hosting.md
operator/: pyproject.toml
operator/alloccontext_operator/: __init__.py  __main__.py
operator/alloccontext_operator/brief/: archive.py  runner.py
operator/alloccontext_operator/deliver/: __init__.py  alerts.py  email.py  render.py  resend.py
operator/alloccontext_operator/predictions/: __init__.py  extract.py  store.py
operator/alloccontext_operator/review/: __init__.py  monthly.py
operator/alloccontext_operator/synthesize/: __init__.py  allocation_advice.py  brief.py  openai.py  prompts.py
schemas/: context-bundle.v1.json
scripts/: _script_runtime.py  bump_version.py  dev-down.sh  dev-up.sh  install-mcp-publisher.sh  publish-mcp-registry.sh  x402-paid-smoke-test.py  x402-production-check.py  x402-reindex-burst.py
tests/: conftest.py  test_adr005_ingest.py  test_allocation_advice.py  test_backup_sqlite.py  test_brief.py  test_bump_version.py  test_coinbase_portfolio.py  test_context_snapshots.py  test_db_migration.py  test_db_schema.py  test_deploy.py  test_dev_stack.py  test_etf.py  test_exchanges_config.py  test_fear_greed.py  test_fred.py  test_horizon.py  test_ingest_outcome.py  test_ingest_runner.py  test_kalshi_api.py  test_kraken_portfolio.py  test_macro.py  test_market_breadth.py  test_mcp_assets_regime.py  test_mcp_bazaar.py  test_mcp_contracts.py  test_mcp_data_staleness.py  test_mcp_freshness.py  test_mcp_handlers.py  test_mcp_health.py  test_mcp_http_lifecycle.py  test_mcp_live_portfolio.py  test_mcp_server.py  test_mcp_validation.py  test_mcp_x402.py  test_mcp_x402_http.py  test_mcp_x402_pricing.py  test_mcp_x402_stables.py  test_predictions.py  test_quality_loop.py  (+12 more)
tests/fixtures/: cmc_global.json  cmc_quotes.json  coingecko_global.json  coingecko_markets.json  etf_flows.json  finnhub_economic_calendar.json  fred_dgs10_observations.json  kalshi_markets_hourly.json  sosovalue_historical_btc.json  sosovalue_metrics_btc.json  tactical_snapshot.json
(+2 files in other folders)
