[project]
name = "alloc-context"
version = "0.1.0"
description = "AllocContext — BTC/ETH allocation context, drift, and rebalance facts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "PyJWT>=2.8",
    "cryptography>=42.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.6",
]
hosted = [
    "mcp>=1.6",
    "x402[fastapi,evm]>=2.0",
    "cdp-sdk>=1.46",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "mcp>=1.6",
    "x402[fastapi,evm]>=2.0",
    "cdp-sdk>=1.46",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
alloc-context = "alloccontext.__main__:main"
alloc-context-mcp = "alloccontext.mcp.server:main"
alloc-context-mcp-http = "alloccontext.mcp.http:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["alloccontext*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
