[project]
name = "alloc-context"
version = "0.1.2"
description = "AllocContext — BTC/ETH allocation context, drift, and rebalance facts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "mcp",
    "x402",
    "bitcoin",
    "ethereum",
    "portfolio",
    "allocation",
    "agents",
    "crypto",
    "rebalance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "PyJWT>=2.8",
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://github.com/negillett/alloc-context"
Documentation = "https://github.com/negillett/alloc-context/blob/main/docs/agent-integration.md"
Repository = "https://github.com/negillett/alloc-context"
Issues = "https://github.com/negillett/alloc-context/issues"
Changelog = "https://github.com/negillett/alloc-context/releases"
"MCP Server" = "https://mcp.alloc-context.com/mcp"

[project.optional-dependencies]
mcp = [
    "mcp>=1.6",
]
hosted = [
    "mcp>=1.6",
    "x402[fastapi,evm]>=2.0",
    "cdp-sdk>=1.46",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "mcp>=1.6",
    "x402[fastapi,evm]>=2.0",
    "cdp-sdk>=1.46",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
alloc-context = "alloccontext.__main__:main"
alloc-context-mcp = "alloccontext.mcp.server:main"
alloc-context-mcp-http = "alloccontext.mcp.http:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["alloccontext*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
