[project]
name = "alloc-context-operator"
version = "0.1.0"
description = "AllocContext operator — email briefs, band alerts, LLM synthesis"
requires-python = ">=3.11"
dependencies = [
    "alloc-context>=0.1.0",
    "requests>=2.31",
]

[project.scripts]
alloc-context-operator = "alloccontext_operator.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["alloccontext_operator*"]
